# document-qa

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  README.md  aegra.json  docker-compose.yml  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_document_optional_scope.py  003_document_chunks_hybrid_search.py  004_drop_conversations_messages.py  005_page_citation_metadata.py  006_drop_page_citation_metadata.py
backend/: config.py
backend/agents/: Dockerfile
backend/agents/e2b_template/: README.md  build.py  smoke_check.py  template.py
backend/agents/qa_agent/: graph.py  middleware.py  sandbox.py  tools.py
backend/agents/title_agent/: graph.py
backend/api/: Dockerfile  app.py
backend/api/routers/: documents.py
backend/api/tests/: test_documents.py
backend/app/: Dockerfile
backend/lib/: logging.py
backend/lib/db/: models.py  session.py
backend/lib/services/: document.py  embeddings.py  ingestion.py  queue.py  retrieval.py
backend/tests/: test_architecture.py
backend/worker/: Dockerfile  __init__.py  jobs.py
backend/worker/tests/: test_jobs.py
frontend/: biome.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/app/: app.tsx  document-drop-overlay.tsx  use-page-document-drop.ts  use-resizable-sidebar.ts
frontend/src/components/: AgentRuntimeProvider.tsx  ChatInput.tsx  DocumentPanel.tsx  DocumentRow.tsx  DocumentSection.tsx  DocumentUpload.tsx  EmptyState.tsx  PdfPreview.tsx  PdfViewer.tsx  PdfViewerDialog.tsx  ThreadSidebar.tsx  agent-runtime-provider.tsx  document-panel.tsx  document-section.tsx  documents-context.tsx  pdf-viewer-dialog.tsx  pdf-viewer.tsx  thread-sidebar.tsx
typings/deepagents/: __init__.pyi
typings/fitz/: __init__.pyi
typings/google/: __init__.pyi
typings/langchain_e2b/: __init__.pyi
typings/pgvector/: sqlalchemy.pyi
typings/redis/: __init__.pyi
typings/rq/: __init__.pyi
(+96 files in other folders)
